--- a/.gitconfig
+++ b/.gitconfig
@@ -5,13 +5,14 @@
 [core]
 	excludesfile=~/.gitignore
 	editor = vim
+	pager = less -F -X
 
 [alias]
 	cat = -p cat-file -p
 	co = checkout
 	ci = commit
 	br = branch
-	st = status
+	st = status -sb
 	pop=reset HEAD~1
 	fixup=commit --amend -C HEAD
 
@@ -23,19 +24,23 @@
     tree-br = log --graph --decorate --abbrev-commit --date-order --pretty=format:'%Cgreen%h%Creset : %s%Cred%d%Creset (%Cblue%an%Creset, %Cblue%ar%Creset)'
     local-tree = log --graph --decorate --abbrev-commit --date-order --pretty=format:'%Cgreen%h%Creset : %s%Cred%d%Creset (%Cblue%an%Creset, %Cblue%ar%Creset)' --all --branches --not --remotes=origin
     new-branch = !bash -c 'git push origin HEAD:"$0" && git co "$0"'
+    ll = log --oneline --decorate
+    dc = diff --cached
+
 
 [branch]
     autosetuprebase = always
     autosetupmerge = true
 
 [push]
-	default = tracking
+	default = nothing
 
 [color]
 	diff   = auto
 	branch = auto
 	status = auto
 	pager  = true
+    ui     = true
 
 [color "diff"]
 	meta = bold black
