--- a/.gitmodules
+++ b/.gitmodules
@@ -28,3 +28,9 @@
 [submodule ".vim/bundle/quicktask"]
 	path = .vim/bundle/quicktask
 	url = https://github.com/aaronbieber/quicktask.git
+[submodule ".vim/bundle/pydoc"]
+	path = .vim/bundle/pydoc
+	url = https://github.com/fs111/pydoc.vim.git
+[submodule ".vim/bundle/ack"]
+	path = .vim/bundle/ack
+	url = https://github.com/mileszs/ack.vim.git
